fixing contrast

--- a/web/sopadeletras.css
+++ b/web/sopadeletras.css
@@ -8,7 +8,7 @@
 
 .sopa ul {
     display: grid;
-    grid-template-columns: repeat(8, 12%);
+    grid-template-columns: repeat(8, 10%);
     list-style: none;
     margin: 0;
     padding: 0;
